Issue: 2

Type.: Feature
File.: Host
Desc.: Added option --opencl-device-types to select specific OpenCL device types
Issue: 2

Type.: Feature
File.: Host
Desc.: Implemented a new feature that allows to quit at next restore point update (and disable it)
Issue: 10

Type.: Feature
File.: Host
Desc.: Moved rules_optimize to hashcat-utils

Type.: Change
File.: Host
Desc.: Renamed option --gpu-accel to --kernel-accel
Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-loops to --kernel-loops
Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-devices to --opencl-devices
Issue: 2

Type.: Bug
File.: Host
Desc.: Fixed a bug in combination of --restore and a user immediately aborting the session after restart
Trac.: 684

Type.: Bug
File.: Kernel
Desc.: Fix a bug in the implementation of GOST R 34.11-94, zero length passwords were not cracked

* changes v2.00 -> v2.01:

Type.: Bug
File.: Host
Desc.: Fix for a cuMemsetD8() 1 error in attacks different from mask attacks
Issue: 1

* changes v1.37 -> v2.00:

Type: Project
File: All
Desc: Made the project Open-Source

Type: Project
File: All
Desc: Switched the license to MIT

Type: Feature
File: Host
Desc: Removed Timebomb-, Beta- and Keyfile- checks

Type: Driver
File: Host
Desc: Added support for AMD APP SDK v3.0 GA

Type: Driver
File: Host
Desc: Added support for AMD ADL 8.0

Type: Driver
File: Host
Desc: added support for NV CUDA 7.5

Type: Feature
File: Host
Desc: Replaced support for NVAPI with support for its successor GDK, starting with version 352.55

Type: Driver
File: Host
Desc: Added support for all AMD Fiji based GPU (Fury)
Trac: 677

Type: Change
File: Kernel
Desc: Bitsliced mode -m 1500 = crypt, DES(Unix), Traditional DES in mask mode

Type: Change
File: Kernel
Desc: Bitsliced mode -m 3000 = LM in mask mode

Type: Feature
File: Kernel
Desc: Added new hash mode -m 12700 = Blockchain, My Wallet
Trac: 645

Type: Feature
File: Kernel